--- a/scalajs-tutorial-fastopt.html
+++ b/scalajs-tutorial-fastopt.html
@@ -11,5 +11,7 @@
     <script type="text/javascript">
       tutorial.webapp.TutorialApp().main();
     </script>
+
+    <button id="click-me-button" type="button" onclick="tutorial.webapp.TutorialApp().addClickedMessage()">Click me!</button>
   </body>
 </html>
