--- a/src/main/resources/index-dev.html
+++ b/src/main/resources/index-dev.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script type="text/javascript">
         function resize_canvas(){
-            tutorial.webapp.Game().resizeCanvas(document.getElementById('canvas'))
+            tutorial.webapp.game.Game().resizeCanvas(document.getElementById('canvas'))
         }
     </script>
 </head>
@@ -17,7 +17,7 @@
 
 <script type="text/javascript" src="../scala-js-tutorial-fastopt.js"></script>
 <script>
-      tutorial.webapp.Game().main(document.getElementById('canvas'));
+      tutorial.webapp.game.Game().main(document.getElementById('canvas'));
 </script>
 
 </body>
