Split into core, web and api sub projects

--- a/web/src/main/resources/protectTheKing.html
+++ b/web/src/main/resources/protectTheKing.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script type="text/javascript">
         function resize_canvas(){
-            tutorial.webapp.game.ProtectTheKing().resizeCanvas(document.getElementById('canvas'))
+            net.bstjohn.kwyjibo.web.game.ProtectTheKing().resizeCanvas(document.getElementById('canvas'))
         }
     </script>
 </head>
@@ -23,7 +23,7 @@
 
 <script type="text/javascript" src="../scala-js-tutorial-fastopt.js"></script>
 <script>
-      tutorial.webapp.game.ProtectTheKing().main(document.getElementById('canvas'));
+      net.bstjohn.kwyjibo.web.game.ProtectTheKing().main(document.getElementById('canvas'));
 </script>
 
 </body>
